--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <div class="row">
                 <div class="col-xs-6">
                   <div class="col-xs-12 panel panel-default">
-                    <img src="images/camiseta-1.jpg" alt="camiseta1" class="img-responsive">
+                    <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-1.jpg" alt="camiseta1" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-xs-6">
